--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="https://unpkg.com/splitting/dist/splitting-cells.css" />
     <script src="https://unpkg.com/splitting/dist/splitting.min.js"></script>
 
+
     <style>
         noscript {
             font-size: 2rem;
@@ -23,6 +24,7 @@
             display: none;
         }
     </style>
+    <link rel="stylesheet" href="./dist/main.css">
     <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.2/tiny-slider.css"> -->
     <!-- <link rel="stylesheet" href="styles/css/index.css"> -->
 
@@ -44,10 +46,10 @@
                     </h3> -->
         <div class="cover">
             <!-- <div class="cover__background"> -->
-                <div class="cover__text">
-                    <h1 class="cover__heading" aria-label="Відкрий театр в собі" data-splitting>
-                        Відкрий<br>театр<br>в собі</h1>
-                </div>
+            <div class="cover__text">
+                <h1 class="cover__heading" aria-label="Відкрий театр в собі" data-splitting>
+                    Відкрий<br>театр<br>в собі</h1>
+            </div>
             <!-- </div> -->
             <img class="cover__img cover__img--desktop" src="img/2-people-in-theatre-full.png" aria-hidden="true"
                 alt=""><img class="cover__img cover__img--mobile" src="img/2-people-in-theatre.png" aria-hidden="true"
@@ -74,13 +76,16 @@
                     </ul> -->
                     <div class="s-section__desc s-section--purpose__desc">
                         Театральна студія - це відкрий простір для усіх, хто хоче вдосконалюватись і розвиватись.
-Кожне заняття побудоване на основі гри і імпровізації, завжди нове і ніколи не повторюється!
+                        Кожне заняття побудоване на основі гри і імпровізації, завжди нове і ніколи не повторюється!
                     </div>
                 </div>
             </div>
             <div class="s-section__slider s-section--purpose__slider">
                 <div class="slider__inner">
-                    <div class="slider__desc">Якщо ти прагнеш вільно дивитись людям в очі, легко спілкуватись, швидко комунікувати, креативно мислити, активно знаходити рішення, впевненно діяти і нічого не боятись, а головне - позбавлятись фізичних і психологічних блоків, і в результаті відчувати себе в рази вільнішою і щасливішою людиною, то тобі до нас!
+                    <div class="slider__desc">Якщо ти прагнеш вільно дивитись людям в очі, легко спілкуватись, швидко
+                        комунікувати, креативно мислити, активно знаходити рішення, впевненно діяти і нічого не боятись,
+                        а головне - позбавлятись фізичних і психологічних блоків, і в результаті відчувати себе в рази
+                        вільнішою і щасливішою людиною, то тобі до нас!
                     </div>
                     <div class="glide">
                         <div class="glide__track" data-glide-el="track">
@@ -97,8 +102,7 @@
                                     <img src="img/carousel/students.jpg" alt="фотографії з занять в тетральній студії">
                                 </li>
                                 <li class="glide__slide">
-                                    <img src="img/carousel/carousel5.jpg"
-                                        alt="фотографії з занять в тетральній студії">
+                                    <img src="img/carousel/carousel5.jpg" alt="фотографії з занять в тетральній студії">
                                 </li>
                                 <li class="glide__slide">
                                     <img src="img/carousel/carousel4.jpg" alt="фотографії з занять в тетральній студії">
@@ -167,7 +171,7 @@
             <div class="s-section__inner s-section--teaching__inner">
                 <div class="s-section__text">
                     <h2 class="s-section__heading s-heading">Як проходять заняття?</h2>
-                    <p class="s-section__desc s-desc">Ми навчаємо на основі професійних акторських тренажів. 
+                    <p class="s-section__desc s-desc">Ми навчаємо на основі професійних акторських тренажів.
                         Заняття - це дві години безперервної зміни ігор та вправ, які зявляються в імпровізації.
                         Ти приходиш, переодягаєшся в зручний одяг і одразу працюєш з усіма!
                         Не бійся) Спершу всім страшно, але через 5хв ти відчуєш, що вже «свій»!
@@ -177,19 +181,24 @@
                     <ul class="s-section__list s-section__list">
                         <li class="s-section__list-item">
                             <h4 class="list-item__heading">Фізичноі свободи</h4>
-                                <p class="list-item__desc">пластика тіла, витривалість, виразність жестів, міміки, ходи, позбавлення фізичних блоків</p>
+                            <p class="list-item__desc">пластика тіла, витривалість, виразність жестів, міміки, ходи,
+                                позбавлення фізичних блоків</p>
                         </li>
                         <li class="s-section__list-item">
                             <h4 class="list-item__heading">Володіння голосом</h4>
-                            <p class="list-item__desc">правильне дихання, виразне мовлення, дикція, музичність, відчуття ритму та темпу, гра на інструментах, спів</p>
+                            <p class="list-item__desc">правильне дихання, виразне мовлення, дикція, музичність, відчуття
+                                ритму та темпу, гра на інструментах, спів</p>
                         </li>
                         <li class="s-section__list-item">
                             <h4 class="list-item__heading">Креативного мислення</h4>
-                                <p class="list-item__desc">образне мислення, вміння креативити, знаходити нестандартні виходи з ситуації, акторські етюди</p>
+                            <p class="list-item__desc">образне мислення, вміння креативити, знаходити нестандартні
+                                виходи з ситуації, акторські етюди</p>
                         </li>
                         <li class="s-section__list-item">
                             <h4 class="list-item__heading">Імпровізації</h4>
-                                <p class="list-item__desc">фокусування уваги, розвиток памяті, позбавлення страхів, комплексів, відчуття атмосфери, довіра до партнера, формування здатності виражати свої почуття, налагодження живого спілкування з публікою, навики імпровізації</p>
+                            <p class="list-item__desc">фокусування уваги, розвиток памяті, позбавлення страхів,
+                                комплексів, відчуття атмосфери, довіра до партнера, формування здатності виражати свої
+                                почуття, налагодження живого спілкування з публікою, навики імпровізації</p>
                         </li>
                     </ul>
                     <img src="img/two-layers-of-actors.png" alt="сцена знімання фільму"
@@ -205,10 +214,11 @@
                 <p class="s-cards__desc s-cards--abo__desc">Абонемент дійсний 1місяць з дня активації.
                     Активація і оплата абонемента відбувається на Вашому першому занятті.
                     Ви можете обрати з трьох варіантів абонементів (див.нижче).
-                    Скільки ж місяців ходити і навчатись - кожен вирішує сам! 
+                    Скільки ж місяців ходити і навчатись - кожен вирішує сам!
                 </p>
                 <p class="s-cards__desc--2 s-cards--abo__desc--2">
-                    *в які дні відходжувати своі заняття (пн/чт/сб) - без різниці, дні не фіксовані за людиною, головне відходити їх за місяць часу. Попередня реєстрація обовязкова!
+                    *в які дні відходжувати своі заняття (пн/чт/сб) - без різниці, дні не фіксовані за людиною, головне
+                    відходити їх за місяць часу. Попередня реєстрація обовязкова!
                 </p>
                 <div class="s-cards__schedule">
                     <h2 class="schedule__heading">Коли?</h2>
@@ -231,7 +241,8 @@
                     </div>
                     <div class="card card--abo">
                         <h3 class="card__heading card--abo__heading"><span>Безліміт</span></h3>
-                        <p class="card__desc card--abo__desc">Відвідування усіх занять — всього 13-14 в місяць. Ціна: 1200
+                        <p class="card__desc card--abo__desc">Відвідування усіх занять — всього 13-14 в місяць. Ціна:
+                            1200
                             грн.</p>
                     </div>
                 </div>
