--- a/index.html
+++ b/index.html
@@ -212,8 +212,9 @@
                         <h2 class="s-cards__heading s-cards--abo__heading">Абонемент</h2>
                         <p class="s-cards__desc s-cards--abo__desc">Абонемент дійсний 1місяць з дня активації.
                             Активація і оплата абонемента відбувається на Вашому першому занятті.
-                            Ви можете обрати з трьох варіантів абонементів (див.нижче).
+                            Ви можете обрати з трьох варіантів абонементів.
                             Скільки ж місяців ходити і навчатись - кожен вирішує сам!
+                            Також у нас можна придбати подарунковий абонемент на навчання.
                         </p>
                         <p class="s-cards__desc--2 s-cards--abo__desc--2">
                             *в які дні відходжувати своі заняття (пн/чт/сб) - без різниці, дні не фіксовані за людиною, головне
